--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@opengenius/react-native-local-mongodb": "^2.3.1",
     "@react-navigation/bottom-tabs": "^6.0.0-next.3",
+    "@react-navigation/elements": "^1.0.0-next.3",
     "@react-navigation/native": "^6.0.0-next.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
@@ -26,6 +28,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.20",
     "@types/react-native": "^0.64.0",
+    "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
