--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@opengenius/react-native-local-mongodb": "^2.3.1",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-navigation/bottom-tabs": "^6.0.0-next.3",
     "@react-navigation/elements": "^1.0.0-next.3",
     "@react-navigation/native": "^6.0.0-next.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-local-mongodb": "^2.2.9",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
