--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@react-navigation/bottom-tabs": "^6.0.0-next.3",
     "@react-navigation/elements": "^1.0.0-next.3",
     "@react-navigation/native": "^6.0.0-next.1",
+    "nanoid": "^3.1.22",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-get-random-values": "^1.6.0",
     "react-native-local-mongodb": "^2.2.9",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
+    "react-native-swipe-list-view": "^3.2.6",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
